--- a/Alluser.html
+++ b/Alluser.html
@@ -145,7 +145,7 @@
 </li>
        
            <li class="nav-item">
-  <a class="nav-link text-white" href="Home.html" target="_blank">
+  <a class="nav-link text-white" href="index.html" target="_blank">
     <i class="bi bi-globe me-2"></i>Go to Our Web
   </a>
 </li>
@@ -237,7 +237,7 @@
 </li>
 
                 <li class="nav-item">
-  <a class="nav-link text-white" href="Home.html" target="_blank">
+  <a class="nav-link text-white" href="index.html" target="_blank">
     <i class="bi bi-globe me-2"></i>Go to Our Web
   </a>
 </li>
