--- a/events.html
+++ b/events.html
@@ -377,7 +377,7 @@
     </div>
     <ul class="eh-nav-menu">
       <li class="eh-nav-item">
-        <a href="Home.html" class="eh-nav-link">Home</a>
+        <a href="index.html" class="eh-nav-link">Home</a>
       </li>
       <li class="eh-nav-item">
         <a href="events.html" class="eh-nav-link active">Events</a>
@@ -561,7 +561,7 @@
       <div class="footer-section">
         <h4>Quick Links</h4>
         <ul>
-          <li><a href="Home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="certificates.html">Certificates</a></li>
           <li><a href="results.html">Results</a></li>
